# panelyze

./: .gitignore  .pre-commit-config.yaml  README.md  check_mat.py  noxfile.py  pyproject.toml
.github/workflows/: release.yml  tests.yml
docs/: api.rst  boundary_conditions.rst  conf.py  examples.rst  implementation.rst  index.rst
docs/examples/: isotropic_plate.py
scripts/: debug_bem.py  nasa_531.py  uniaxial_example.py  visualize_debug.py
src/panelyze/: __init__.py
src/panelyze/analysis/: plotting.py
src/panl/: __init__.py
src/panl/analysis/: solver.py
tests/: __init__.py  test_nasa_5_3_1.py  test_placeholder.py  test_plotting.py  test_scf_isotropic.py  test_solver_features.py
