[project]
name = "panl"
version = "0.1.0"
description = "Analysis utility for structural panels with cutouts"
authors = [{ name = "Benjamin Crews", email = "aceF22+panl@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
keywords = ["structural", "mechanics", "BEM", "panel", "stress", "aerospace"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
]
dependencies = ["numpy>=2.4.0", "matplotlib>=3.10.0", "rich>=14.3.1"]

[project.urls]
Homepage = "https://github.com/Czarified/panl"
Repository = "https://github.com/Czarified/panl"
Documentation = "https://panl.readthedocs.io/"

[dependency-groups]
test = ["pytest>=8.3.4", "pytest-cov>=6.0.0", "safety>=3.3.0"]
lint = ["black>=24.10.0", "isort>=5.13.2", "flake8>=7.1.1", "darglint>=1.8.1"]
dev = ["pre-commit>=4.0.1", "nox>=2024.10.9", "nox-poetry>=1.0.3"]
docs = [
    "sphinx>=8.1.3",
    "furo>=2024.8.6",
    "sphinx-autodoc-typehints>=3.0.0",
    "xdoctest>=1.2.0",
    "myst-parser>=4.0.0",
    "sphinxcontrib-mermaid>=1.0.0",
]

[tool.poetry]
packages = [{ include = "panl", from = "src" }]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--strict-markers", "--strict-config", "--showlocals"]

[tool.coverage.run]
source = ["panl"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 60

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["panl"]
